--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Random Password Generator</title>
   <link rel="stylesheet" href="index.css">
+  <script src="script.js"></script>
 
 </head>
 <body>
 <div class="container">
-      <h1>Generate a <br>Random Password</h1>
+      <h1>Generate a <br><span >Random Password</span></h1>
       <div class="display">
         <input type="text" id="password" placeholder="password">
-        <img src="images/copy.png"
+        <img src="images/copy.png">
       </div>
+      <button><img src="images/generate.png">Generate Password</button>
 </div>
   
 </body>
